--- a/upcv_app/scompras_app/templates/scompras/crear_dependencia.html
+++ b/upcv_app/scompras_app/templates/scompras/crear_dependencia.html
@@ -34,14 +34,7 @@
           <div class="card">
             <div class="card-body">
 
-              {% if messages %}
-                <ul>
-                  {% for message in messages %}
-                    <li class="message">{{ message }}</li>
-                  {% endfor %}
-                </ul>
-              {% endif %}
-
+              
               {% if form.errors %}
               <div class="alert alert-danger">
                 <ul>
@@ -76,7 +69,7 @@
                 </div>
 
                 <div class="form-footer text-end mt-3">
-                  <button class="btn btn-primary" type="submit">
+                  <button class="btn btn-primary px-4" type="submit">
                     {% if form.instance.pk %}Actualizar Dependencia{% else %}Crear Dependencia{% endif %}
                   </button>
                 </div>
