--- a/upcv_app/scompras_app/templates/scompras/editar_empleado.html
+++ b/upcv_app/scompras_app/templates/scompras/editar_empleado.html
@@ -121,7 +121,7 @@
               </div>
               
               <div class="form-footer text-end">
-                <button class="btn btn-primary" type="submit">Guardar Cambios</button>
+                <button class="btn btn-primary px-4" type="submit">Guardar Cambios</button>
               </div>
             </form>
           
