--- a/upcv_app/scompras_app/templates/scompras/editar_institucion.html
+++ b/upcv_app/scompras_app/templates/scompras/editar_institucion.html
@@ -38,14 +38,7 @@
               <h5>Editar Datos Generales</h5>
             </div>
             <div class="card-body">
-              {% if messages %}
-              <ul>
-                {% for message in messages %}
-                <li class="message">{{ message }}</li>
-                {% endfor %}
-              </ul>
-              {% endif %}
-              
+                            
                {% if form.errors %}
               <div class="alert alert-danger">
                 <ul>
@@ -91,7 +84,7 @@
                 </div>
                 <br>
                 <div class="form-footer text-end">
-                  <button class="btn btn-primary" type="submit">Guardar Cambios</button>
+                  <button class="btn btn-primary px-4" type="submit">Guardar Cambios</button>
                 </div>
               </form>
 
