--- a/upcv_app/scompras_app/templates/scompras/importar_excel.html
+++ b/upcv_app/scompras_app/templates/scompras/importar_excel.html
@@ -34,14 +34,7 @@
           </div>
           <div class="card-body">
             <!-- Mostramos los mensajes de éxito o error si existen -->
-            {% if messages %}
-              <ul>
-                {% for message in messages %}
-                  <li class="message">{{ message }}</li>
-                {% endfor %}
-              </ul>
-            {% endif %}
-
+            
             <!-- Formulario para importar archivo Excel y registrar fecha -->
             <form method="POST" enctype="multipart/form-data">
               {% csrf_token %}
@@ -64,7 +57,7 @@
                 </div>
               </div>
               <div class="form-footer text-end">
-                <button class="btn btn-primary" type="submit">Importar</button>
+                <button class="btn btn-primary px-4" type="submit">Importar</button>
               </div>
             </form>
           </div>
