--- a/upcv_app/scompras_app/templates/scompras/user_form_edit.html
+++ b/upcv_app/scompras_app/templates/scompras/user_form_edit.html
@@ -30,14 +30,7 @@
           <div class="card">
             <div class="card-body">
 
-              {% if messages %}
-              <ul>
-                {% for message in messages %}
-                <li class="message">{{ message }}</li>
-                {% endfor %}
-              </ul>
-              {% endif %}
-
+              
               {% if form.errors %}
               <div class="alert alert-danger">
                 <ul>
@@ -92,7 +85,7 @@
                 </div>
 
                 <div class="form-footer text-end">
-                  <button class="btn btn-primary" type="submit">Guardar Cambios</button>
+                  <button class="btn btn-primary px-4" type="submit">Guardar Cambios</button>
                 </div>
               </form>
 
