--- a/upcv_app/scompras_app/templates/scompras/configuracion_general.html
+++ b/upcv_app/scompras_app/templates/scompras/configuracion_general.html
@@ -34,14 +34,7 @@
             </div>
             <div class="card-body">
               <!-- Mostramos los mensajes de éxito o error si existen -->
-              {% if messages %}
-                <ul>
-                  {% for message in messages %}
-                    <li class="message">{{ message }}</li>
-                  {% endfor %}
-                </ul>
-              {% endif %}
-
+              
               <!-- Formulario para editar la configuración general -->
               <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
@@ -72,7 +65,7 @@
                   </div>
                 </div>
                 <div class="form-footer text-end">
-                  <button class="btn btn-primary" type="submit">Guardar Configuración</button>
+                  <button class="btn btn-primary px-4" type="submit">Guardar Configuración</button>
                 </div>
               </form>
             </div>
