--- a/upcv_app/scompras_app/templates/scompras/crear_empleado.html
+++ b/upcv_app/scompras_app/templates/scompras/crear_empleado.html
@@ -34,14 +34,7 @@
           </div>
           <div class="card-body">
             <!-- Mostramos los mensajes de éxito o error si existen -->
-            {% if messages %}
-              <ul>
-                {% for message in messages %}
-                  <li class="message">{{ message }}</li>
-                {% endfor %}
-              </ul>
-            {% endif %}
-
+            
             <!-- Formulario para crear un empleado -->
             <form method="POST" enctype="multipart/form-data">
               {% csrf_token %}
@@ -106,7 +99,7 @@
             
               </div>
               <div class="form-footer text-end">
-                <button class="btn btn-primary" type="submit">Agregar Empleado</button>
+                <button class="btn btn-primary px-4" type="submit">Agregar Empleado</button>
               </div>
             </form>
           </div>
