--- a/upcv_app/scompras_app/templates/scompras/editar_editar.html
+++ b/upcv_app/scompras_app/templates/scompras/editar_editar.html
@@ -34,14 +34,7 @@
             </div>
             <div class="card-body">
               <!-- Mostramos los mensajes de éxito o error si existen -->
-              {% if messages %}
-              <ul>
-                {% for message in messages %}
-                <li class="message">{{ message }}</li>
-                {% endfor %}
-              </ul>
-              {% endif %}
-              {% if form.errors %}
+                            {% if form.errors %}
               <div class="alert alert-danger">
                 <ul>
                   {% for field, errors in form.errors.items %}
@@ -78,7 +71,7 @@
              
 
                 <div class="form-footer text-end">
-                  <button class="btn btn-primary" type="submit">
+                  <button class="btn btn-primary px-4" type="submit">
                     {% if form.instance.pk %}Actualizar Unidad{% else %}Crear Unidad{% endif %}
                   </button>
                 </div>
