--- a/upcv_app/scompras_app/templates/scompras/login.html
+++ b/upcv_app/scompras_app/templates/scompras/login.html
@@ -88,7 +88,7 @@
                     {% comment %} <a href="{% url 'password_reset' %}">¿Olvidaste tu contraseña?</a> {% endcomment %}
 
                   </div>
-                  <button class="btn btn-primary btn-block w-100" type="submit">Entrar</button>
+                  <button class="btn btn-primary px-4" type="submit">Entrar</button>
                 </div>
                 
               </form>
