--- a/upcv_app/scompras_app/templates/scompras/user_form.html
+++ b/upcv_app/scompras_app/templates/scompras/user_form.html
@@ -32,14 +32,7 @@
             </div>
             <div class="card-body">
               <!-- Mostramos los mensajes de éxito o error si existen -->
-              {% if messages %}
-              <ul>
-                {% for message in messages %}
-                <li class="message">{{ message }}</li>
-                {% endfor %}
-              </ul>
-              {% endif %}
-              {% if form.errors %}
+                            {% if form.errors %}
               <div class="alert alert-danger">
                 <ul>
                   {% for field, errors in form.errors.items %}
@@ -100,7 +93,7 @@
                 </div>
 
                 <div class="form-footer text-end">
-                  <button class="btn btn-primary" type="submit">{% if form.instance.pk %}Actualizar Usuario{% else %}Crear Usuario{% endif %}</button>
+                  <button class="btn btn-primary px-4" type="submit">{% if form.instance.pk %}Actualizar Usuario{% else %}Crear Usuario{% endif %}</button>
                 </div>
               </form>
 
